...
      />
      <Tabs.Screen
        name="meds"
        options={{
          title: 'Meds',
          tabBarLabel: 'Meds',
          tabBarButtonTestID: 'tab-meds',
          tabBarIcon: ({ color }) => (
            <Image
              source={require('@/assets/images/tabIcons/meds.png')}
              style={[styles.icon, { tintColor: color }]}
            />
          ),
...
